style: 한 줄에 점 하나 찍는 규칙을 스트림을 사용하는 경우에 국한하도록 수정한다